[gd_scene load_steps=8 format=3 uid="uid://iy6pocudmtyv"]

[ext_resource type="Script" path="res://src/Levels/Tests/TestLevel/Test1/script/main_game_logic.gd" id="1_xjt35"]
[ext_resource type="PackedScene" uid="uid://bdvkdv77fslji" path="res://addons/midi/ADSR.tscn" id="2_7vlgk"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="3_l67hh"]
[ext_resource type="Texture2D" uid="uid://du4bb38ap1cud" path="res://assets/sprites/arrow_debug.png" id="4_fj2b5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xtyir"]
atlas = ExtResource("4_fj2b5")
region = Rect2(0, 0, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulgfm"]
atlas = ExtResource("4_fj2b5")
region = Rect2(0, 31, 31, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1foj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtyir")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulgfm")
}],
"loop": true,
"name": &"tapped",
"speed": 5.0
}]

[node name="test game mechanics" type="Node2D"]
script = ExtResource("1_xjt35")

[node name="ADSR" parent="." instance=ExtResource("2_7vlgk")]

[node name="MidiPlayer" parent="." instance=ExtResource("3_l67hh")]
file = "res://src/Levels/Tests/TestLevel/Test1/Tetris - Tetris Main Theme.mid"
playing = true
volume_db = -10.811
soundfont = "res://src/Levels/Tests/TestLevel/Test1/UprightPianoKW-small-20190703.sf2"

[node name="up" type="AnimatedSprite2D" parent="."]
position = Vector2(360, 180)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_l1foj")
animation = &"idle"

[node name="down" type="AnimatedSprite2D" parent="."]
position = Vector2(360, 280)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_l1foj")
animation = &"idle"

[connection signal="midi_event" from="MidiPlayer" to="." method="_on_midi_player_midi_event"]
